2007-03-02 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genGenPointerSet): removed bogus assertion

2007-02-28 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/mcs51/crtxclear.asm: pdata segment of 256 byte would not
	be cleared. Unconditionally set __XPAGE
	* src/hc08/gen.c: --no-gen-comments (RFE #1493816) for hc08

2007-02-27 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCCglobl.h,
	* src/SDCCmain.c,
	* src/mcs51/gen.c, 
	* src/mcs51/rtrack.c, 
	* src/ds390/gen.c,
	* doc/sdccman.lyx: added --no-gen-comments
	* src/mcs51/peeph.def: added 192.b, disabled 185

2007-02-25 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genCast): fixed typo
	* device/lib/pic16/Makefile.subdir: only install existing files
	* device/lib/pic16/libdev/Makefile.in: build serially, avoid races

2007-02-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/mcs51/crtcall.asm: new, added for indirect calls
	* device/lib/mcs51/crtclear.asm,
	* device/lib/mcs51/crtxclear.asm: renumbered labels
	* device/lib/mcs51/Makefile.in: added crtcall.asm
	* doc/sdccman.lyx: documented mcs51 crt* library startup code
	* src/mcs51/gen.c (movc): removed,
	  (aopGet, genPlusBits): clear a after loading the carry (possibly from
	    acc.x or psw.x),
	  (toCarry, genSend, genRet): added function toCarry,
	  (genPcall): use "lcall @a+dptr" for functions w/o parameters,
	  (assignBit, genAssign, genCast): added function assignBit
	* src/mcs51/Makefile.bcc: added rtrack.c
	* src/mcs51/ralloc.h: made valueKnown a bitfield
	* src/mcs51/rtrack.c (getReg, rtrackUpdate): added getReg,
	  fixed "jbc acc" and "cpl acc" bug, enhanced "cjne", "jnz" and "djnz",
	  disabled InvalidateAllRx for lcall __gptrput, added "xch a,rn"
	* src/pic/pcode.c (FixRegisterBanking): fixed warning used uninitialized
	* src/z80/gen.c: added AOP_IS_PAIRPTR,
	  (_pop): only pop valid pairs, see gencjneshort,
	  (gencjneshort): return pair that still needs to be popped, restructured,